Added a file that was not included in the preceding commit

--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -294,7 +294,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@color/black_overlay"
                 android:visibility="visible"
-                app:layout_constraintTop_toBottomOf="@+id/liked_text" />
+                app:layout_constraintBottom_toTopOf="@+id/button_respond_story" />
 
             <Button
                 android:id="@+id/button_respond_story"
