--- a/app/src/main/res/layout/fragment_geostory_map.xml
+++ b/app/src/main/res/layout/fragment_geostory_map.xml
@@ -7,9 +7,9 @@
     android:layout_gravity="top"
     android:elevation="0dp"
     android:outlineProvider="bounds"
-    tools:context=".StoryMapFragment">
+    tools:context=".GeoStoryFragment">
 
-    <!--<include layout="@layout/layout_storymap_map" />-->
+    <!--<include layout="@layout/layout_geostory_map" />-->
     <LinearLayout
         android:id="@+id/resolution_info"
         android:layout_width="match_parent"
@@ -81,22 +81,6 @@
 
     <include
         android:id="@+id/storymap_viewer_sheet"
-        layout="@layout/layout_storymap_viewer" />
-
-    <LinearLayout
-        android:id="@+id/storymap_banner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:visibility="gone">
-        <TextView
-            android:layout_margin="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/storywell_handwriting"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:text="Press Share Story to allow other families to listen to this story. Please make sure you are not sharing any private information." />
-    </LinearLayout>
+        layout="@layout/layout_geostory_viewer" />
 
 </android.support.design.widget.CoordinatorLayout>
