--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -71,6 +71,16 @@
                 android:text="Setting"
                 style="@style/AppTheme.ActionButton"/>
 
+            <Button
+                android:id="@+id/button_fitness_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/rounded_secondary_button"
+                android:fontFamily="@font/storywell_handwriting"
+                android:text="@string/about_fitness_data_button"
+                style="@style/AppTheme.ActionButton" />
+
             <TextView
                 android:id="@+id/textCopyrightHeading"
                 android:layout_width="match_parent"
