--- a/app/src/main/res/layout/content_fitness_sync.xml
+++ b/app/src/main/res/layout/content_fitness_sync.xml
@@ -14,9 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/button_sync"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,13 +22,13 @@
 
         <TextView
             android:id="@+id/log_text"
-            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:fontFamily="@font/storywell_handwriting"
             android:text="@string/fitness_sync_initial_log"
-            android:textSize="18sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
     </ScrollView>
 
