--- a/app/src/main/res/layout/layout_geostory_viewer.xml
+++ b/app/src/main/res/layout/layout_geostory_viewer.xml
@@ -304,6 +304,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:drawableLeft="@drawable/ic_thumb_up_24px"
+                android:drawableTint="@color/colorPrimaryDark"
                 android:fontFamily="@font/storywell_handwriting"
                 android:text="Like"
                 android:textColor="@color/black"
@@ -324,7 +325,7 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/button_respond_story"
                 app:layout_constraintStart_toEndOf="@+id/button_respond_story"
                 app:layout_constraintTop_toTopOf="@+id/button_respond_story" />
