--- a/app/src/main/res/layout/content_fitness_sync.xml
+++ b/app/src/main/res/layout/content_fitness_sync.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:paddingBottom="8dp"
             android:fontFamily="@font/storywell_handwriting"
             android:text="@string/fitness_sync_initial_log"
             android:textColor="@color/black"
