Completed the initial codes for liking a geostory

--- a/app/src/main/res/values/plural.xml
+++ b/app/src/main/res/values/plural.xml
@@ -8,4 +8,8 @@
         <item quantity="one">%d child</item>
         <item quantity="other">%d children</item>
     </plurals>
+    <plurals name="number_of_reactions">
+        <item quantity="one">One family liked this story.</item>
+        <item quantity="other">%d families liked this story.</item>
+    </plurals>
 </resources>
