--- a/app/src/main/res/layout/layout_geostory_viewer.xml
+++ b/app/src/main/res/layout/layout_geostory_viewer.xml
@@ -267,9 +267,8 @@
                 android:id="@+id/liked_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:fontFamily="@font/storywell_handwriting"
-                android:text="6 people "
+                android:text="6 people liked this."
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -283,6 +282,7 @@
                 android:text="liked this."
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/liked_text"
                 app:layout_constraintStart_toEndOf="@+id/liked_text"
                 app:layout_constraintTop_toTopOf="@+id/liked_text" />
