--- a/app/src/main/res/layout/layout_geostory_viewer.xml
+++ b/app/src/main/res/layout/layout_geostory_viewer.xml
@@ -267,6 +267,7 @@
                 android:id="@+id/liked_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:fontFamily="@font/storywell_handwriting"
                 android:text="6 people liked this."
                 android:textColor="@color/black"
@@ -304,7 +305,6 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:drawableLeft="@drawable/ic_thumb_up_24px"
-                android:drawableTint="@color/colorPrimaryDark"
                 android:fontFamily="@font/storywell_handwriting"
                 android:text="Like"
                 android:textColor="@color/black"
