Changed like to reactions

--- a/app/src/main/res/layout/layout_geostory_viewer.xml
+++ b/app/src/main/res/layout/layout_geostory_viewer.xml
@@ -269,7 +269,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/storywell_handwriting"
-                android:text="6 people liked this."
+                android:text="6 people reacted to this."
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -303,10 +303,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:drawableLeft="@drawable/ic_thumb_up_24px"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:drawableStart="@drawable/ic_thumb_up_24px"
+                android:drawablePadding="8dp"
                 android:fontFamily="@font/storywell_handwriting"
-                android:text="Like"
+                android:text="@string/button_geostory_reaction"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold"
