--- a/app/src/main/res/values/panas.xml
+++ b/app/src/main/res/values/panas.xml
@@ -22,4 +22,28 @@
         <item>Irritable</item>
         <item>Hostile</item>
     </string-array>
+    <string-array name="panas_positive_emotion_list">
+        <item>Enthusiastic</item>
+        <item>Interested</item>
+        <item>Determined</item>
+        <item>Excited</item>
+        <item>Inspired</item>
+        <item>Alert</item>
+        <item>Active</item>
+        <item>Strong</item>
+        <item>Proud</item>
+        <item>Attentive</item>
+    </string-array>
+    <string-array name="panas_negative_emotion_list">
+        <item>Scared</item>
+        <item>Afraid</item>
+        <item>Upset</item>
+        <item>Distressed</item>
+        <item>Jittery</item>
+        <item>Nervous</item>
+        <item>Ashamed</item>
+        <item>Guilty</item>
+        <item>Irritable</item>
+        <item>Hostile</item>
+    </string-array>
 </resources>
