- Change app name to Storywell (used to be StoryWell). - Remove randomization for the adults' emotion buttons - Make the emotion logger scrollable

--- a/app/src/main/res/layout/fragment_statement_view.xml
+++ b/app/src/main/res/layout/fragment_statement_view.xml
@@ -93,6 +93,7 @@
                     android:src="@drawable/ic_round_arrow_forward_ios_24px"
                     android:text="@string/statement_button_next"
                     android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"
                     android:fontFamily="@font/storywell_handwriting"
                     android:tint="@color/colorPrimaryDark"
                     app:layout_constraintBottom_toBottomOf="parent"
