--- a/app/src/main/res/layout/layout_mood_picker_adult.xml
+++ b/app/src/main/res/layout/layout_mood_picker_adult.xml
@@ -10,13 +10,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:layout_marginBottom="@dimen/actionbar_size"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -38,17 +40,21 @@
                 android:id="@+id/adult_mood_picker_button_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:horizontalSpacing="8dp"
-                android:verticalSpacing="8dp"
-                android:columnCount="3">
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:horizontalSpacing="4dp"
+                android:verticalSpacing="4dp"
+                android:columnCount="2">
 
                 <ToggleButton
                     android:id="@+id/toggle_button_00"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -59,9 +65,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_01"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -72,9 +80,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_02"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -85,9 +95,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_03"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -98,9 +110,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_04"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -111,9 +125,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_05"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -124,24 +140,26 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_06"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
                     android:textStyle="bold"
                     android:textOff="@string/button_mood_off"
-                    android:textOn="@string/button_mood_on"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent" />
+                    android:textOn="@string/button_mood_on" />
 
                 <ToggleButton
                     android:id="@+id/toggle_button_07"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -152,9 +170,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_08"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -165,9 +185,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_09"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -178,9 +200,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_10"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -191,9 +215,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_11"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -204,9 +230,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_12"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -217,9 +245,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_13"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -230,9 +260,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_14"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -243,9 +275,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_15"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -256,9 +290,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_16"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -269,9 +305,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_17"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -282,9 +320,11 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_18"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
@@ -297,17 +337,18 @@
                 <ToggleButton
                     android:id="@+id/toggle_button_19"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/adult_mood_button_height"
                     android:layout_columnWeight="0.5"
                     android:layout_margin="4dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
                     android:background="@drawable/toggle_button_moods"
                     android:checked="false"
                     android:fontFamily="@font/storywell_handwriting"
                     android:textStyle="bold"
                     android:textOff="@string/button_mood_off"
                     android:textOn="@string/button_mood_on"
-                    android:layout_row="6"
-                    android:layout_column="2" />
+                    android:layout_row="6" />
 
             </GridLayout>
 
